// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders correctly for player 1 with 5 points 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "fontSize": 16,
        "fontWeight": "bold",
        "position": "absolute",
      },
      {
        "bottom": "75%",
        "left": 140,
        "transform": [
          {
            "rotate": "180deg",
          },
        ],
      },
    ]
  }
  testID="total-score-1"
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "bold",
        },
        {
          "color": "#316600",
        },
      ]
    }
    testID="total-score-1-text"
  >
    5
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "bold",
        },
        {
          "color": "#6f6f7b",
          "fontWeight": "normal",
        },
      ]
    }
  >
     / 121
  </Text>
</View>
`;

exports[`renders correctly for player 2 with 42 points 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "fontSize": 16,
        "fontWeight": "bold",
        "position": "absolute",
      },
      {
        "right": 140,
        "top": "75%",
      },
    ]
  }
  testID="total-score-2"
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "bold",
        },
        {
          "color": "#0059b2",
        },
      ]
    }
    testID="total-score-2-text"
  >
    42
  </Text>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "bold",
        },
        {
          "color": "#6f6f7b",
          "fontWeight": "normal",
        },
      ]
    }
  >
     / 121
  </Text>
</View>
`;
